# work_assistent

./: .gitignore  README.md  assistent.py  main.py  pyproject.toml  resources.qrc
assets/qt_assets/forms/: ui_divisions_report_widget.ui
qt_assets/qt_forms/: ui_edit_data_dialog.ui  ui_main_menu_widget.ui  ui_main_window.ui  ui_orders_report_widget.ui  ui_report_generation_widget.ui  ui_services_report_widget.ui  ui_staff_report_widget.ui  ui_work_events_report_widget.ui  ui_work_types_report_widget.ui  ui_works_report_widget.ui
qt_assets/qt_styles/: main_window_style.qss  report_generation_widget_style.qss  report_widget_style.qss
scripts/: compile_qrc_ui.py
src/: constants.py  main.py
src/core/: app_coordinator.py
src/core/interfaces/: coordinators.py  invokers.py  repositories.py  services.py  ui.py  viewmodels.py
src/core/models/: division_domain.py
src/database/: config.py  db_manager.py
src/database/entities/: __init__.py  department.py  division.py  employee.py  employee_position.py  equipment.py  equipment_location.py  work.py  work_order.py  work_task.py  work_type.py
src/database/interfaces/: __init__.py  repositories.py
src/database/repositories/: __init__.py  division.py  division_repository.py
src/databases/: database.py
src/di/: container.py  decorators.py  injections.py  invokers.py  providers.py
src/di/interfaces/: __init__.py  injections.py
src/di/providers/: __init__.py  coordinators.py  databases.py  injections.py  services.py  view_models.py  views.py
src/gui/: constants.py
src/gui/coordinators/: app_coordinator.py  reports_coordinator.py
src/gui/interfaces/: coordinators.py  views.py
src/gui/models/: division_table_model.py
src/gui/viewmodels/: __init__.py  base_viewmodel.py  division_viewmodel.py  work_viewmodel.py
src/gui/views/: __init__.py  dialog_edit_view.py  division_report_view.py  main_menu_view.py  main_menu_window.py  main_window.py  main_window_view.py  order_report_view.py  report_generator_view.py  reports_window.py  staff_report_view.py  work_event_report_view.py  work_report_view.py  work_type_report_view.py
src/interfaces/: division.py
src/package/: device.py  employee.py  reports.py  work.py  work_processes.py  work_sheet.py  work_sheet_test.py
src/repositories/: division_repository.py
src/services/: EmployeeService.py
src/services/interfaces/: services.py
src/utils/: qt_recource_loader.py
src/view_models/: view_service_models.py
src/viewmodels/: base_viewmodel.py  division_viewmodel.py  work_viewmodel.py
src/viewmodels/interfaces/: __init__.py  view_models.py
src/views/: division_report_view.py  report_generator_view.py
src/views/windows/: ui_main_window.py  (+9 more)
(+1 files in other folders)
