[project]
name = ""
version = "0.0.2"
requires-python = ">=3.13"
dependencies = [
    "dishka>=1.7.2",
    "openpyxl>=3.1.5",
    "pillow>=12.0.0",
    "pydantic[email]>=2.12.5",
    "pyside6>=6.10.1",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"


# ====================================================================
# Секция для конфигурации Mypy
# ====================================================================
[tool.mypy]
# === 1. Базовые настройки области видимости ===
# Указываем Mypy, какие папки проверять.
# Замените 'src' и 'tests' на имена ваших папок с кодом.
files = ["src", "tests"]

# === 2. Уровень строгости проверки (Рекомендуется для новых проектов) ===
# Включение строгого режима активирует сразу множество проверок.
strict = true

# Если вы работаете с унаследованным кодом и strict=true слишком сурово:
# Используйте эти флаги для постепенного ужесточения:
# disallow_untyped_defs = true    # Запрещает функции без аннотаций
# no_implicit_optional = true      # Требует явного указания Optional[...]
# warn_unused_ignores = true       # Предупреждает о ненужных # type: ignore

# === 3. Обработка зависимостей и импортов ===
# Это очень важная настройка: Mypy не будет ругаться, если
# сторонние библиотеки (например, requests, Django) не имеют своих аннотаций.
ignore_missing_imports = true

# Позволяет Mypy находить импорты в вашей структуре проекта
# (например, импорт src/models из tests/)
# show_absolute_path = true # Полезно для отладки

# === 4. Правила для конкретных модулей или исключения ===

# Пример: Игнорировать ошибки типов в папке миграций SQLAlchemy/Django
[[tool.mypy.overrides]]
module = ["migrations.*", "vendor.*", "src.gui.generated.*"]
ignore_errors = true

# Пример: Сделать определенный файл менее строгим
[[tool.mypy.overrides]]
module = "legacy_code.old_script"
strict = false


# ====================================================================
# Секция для конфигурации Black
# ====================================================================
[tool.black]
# Указывает максимальную длину строки (по умолчанию 88)
line-length = 100

# Включает поддержку Python 3.9+ (необязательно, если у вас современный проект)
target-version = ['py314']

# Исключает определенные файлы или директории из форматирования
# Используется синтаксис регулярных выражений Python
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
